--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 {
     "max_open_trades": 1,
     "stake_currency": "USDT",
-    "stake_amount": 100,
+    "stake_amount":"unlimited",
     "tradable_balance_ratio": 0.99,
     "fiat_display_currency": "USD",
     "use_sell_signal": true,
